wip fix unit tests for JDK 17